# Routes/routes.js
@@ -5,5 +5,6 @@ const router = express.Router();
 
 router.post("/auth/login", authController.login);
 router.post("/auth/register", authController.register);
+router.post("/auth/forgotPassword", authController.forgotPassword);
 
 module.exports = router;
